r1233: Reworking the way opcodes are generated. Now all opcodes are read in successfully and automatically.